--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,44 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{dunnhofer2025istracking,
+  title={Is Tracking really more challenging in Egocentric First Person Vision?},
+  author={Dunnhofer, Matteo and Manigrasso, Zaira and Micheloni, Christian},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV)},
+  html={[coming soon]},
+  code={[coming soon]},
+  website={[coming soon]},
+  year={2025},
+  preview={iccv2025.png},
+  selected={true}
+}
+
+
+@inproceedings{manigrasso2025,
+  title={T-EVO: Tracking in Egovision for Online Visual Episodic Memory},
+  author = {Manigrasso, Zaira and Finocchiaro, Antonio and Manara, Davide and Forte, Rosario and Nottebaum, Moritz and Dunnhofer, Matteo and Farinella, Giovanni Maria and Furnari, Antonino and Micheloni, Christian},
+  booktitle={International Conference on Image Analysis and Processing (ICIAP)},
+  year={2025},
+  html={}
+}
+
+@inproceedings{salierno2025,
+  title={Ego-Exo Object Correspondence by SAM2 and Cross-View Prompting},
+  author = {Salierno, Devis and Dunnhofer, Matteo and Micheloni, Christian},
+  booktitle={International Conference on Image Analysis and Processing (ICIAP)},
+  year={2025},
+  html={}
+}
+
+@inproceedings{catinello2025,
+  title={Ego and exo views for an object-level human behavior analysis and understanding through tracking in retail spaces},
+  author = {Catinello, Alessandro Sebastiano and Dunnhofer, Matteo and Farinella, Giovanni Maria and Frontoni, Emanuele and Furnari, Antonino and Micheloni, Christian and Paolanti, Marina and Pietrini, Rocco and Salierno, Devis and Stacchio, Lorenzo and Yaar, Asfand},
+  booktitle={International Conference on Image Analysis and Processing (ICIAP)},
+  year={2025},
+  html={}
+}
+
+
 @inproceedings{dunnhofer2025vss,
   title={Dynamic Object Processing in Macaque IT Cortex: Temporal Dynamics and Model Limitations},
   author={Dunnhofer, Matteo and Micheloni, Christian and Kar, Kohitij},
