--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{dunnhofer2025istracking,
-  title={Is Tracking really more challenging in Egocentric First Person Vision?},
+  title={Is Tracking really more challenging in First Person Egocentric Vision?},
   author={Dunnhofer, Matteo and Manigrasso, Zaira and Micheloni, Christian},
   booktitle={IEEE/CVF International Conference on Computer Vision (ICCV)},
   html={[coming soon]},
@@ -77,7 +77,7 @@
   video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
   year={2024},
   preview={cviu2024.png},
-  selected={true}
+  selected={false}
 }
 
 @inproceedings{dunnhofer2024tracking,
@@ -89,7 +89,11 @@
   video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
   code={https://github.com/matteo-dunnhofer/SkiTB-toolkit},
   website={https://machinelearning.uniud.it/datasets/skitb/},
-  arxiv={2312.09723}
+  arxiv={2312.09723},
+  preview={wacv2024.jpg},
+  selected={true},
+  extversion={https://www.sciencedirect.com/science/article/pii/S1077314224000596?via%3Dihub#bib1},
+  extversionname={CVIU 2024},
 }
 
 @article{dunnhofer2023visual,
@@ -161,7 +165,7 @@
   year={2022},
   publisher={Elsevier},
   preview={imavis2022.png},
-  selected={true}
+  selected={false}
 }
 
 @thesis{dunnhofer2022visual,
@@ -179,7 +183,7 @@
   code={https://github.com/matteo-dunnhofer/MRPyrNet},
   html={https://www.sciencedirect.com/science/article/abs/pii/S0895611122001124},
   year={2022},
-  publisher={Pergamon}
+  publisher={Elsevier}
 }
 
 @inproceedings{dunnhofer2022cocolot,
@@ -190,7 +194,11 @@
   arxiv={2205.04261},
   code={https://github.com/matteo-dunnhofer/CoCoLoT},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  preview={icpr2022.png},
+  selected={true},
+  extversion={https://www.sciencedirect.com/science/article/pii/S0262885622000774},
+  extversionname={IMAVIS 2022}
 }
 
 @inproceedings{kristan2022tenth,
@@ -256,6 +264,8 @@
   organization={PMLR},
   preview={midl2021.png},
   selected={true},
+  extversion={https://www.sciencedirect.com/science/article/abs/pii/S0895611122001124},
+  extversionname={CMIG 2022},
 }
 
 @inproceedings{dunnhofer2021first,
