--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -71,7 +71,7 @@
   title={Visual tracking in camera-switching outdoor sport videos: Benchmark and baselines for skiing},
   author={Dunnhofer, Matteo and Micheloni, Christian},
   journal={Computer Vision and Image Understanding},
-  html={https://www.sciencedirect.com/science/article/pii/S1077314224000596?via%3Dihub#bib1},
+  html={https://www.sciencedirect.com/science/article/pii/S1077314224000596},
   code={https://github.com/matteo-dunnhofer/skitb-toolkit},
   website={https://machinelearning.uniud.it/datasets/skitb/},
   video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
