--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,9 +7,9 @@
   title={Is Tracking really more challenging in First Person Egocentric Vision?},
   author={Dunnhofer, Matteo and Manigrasso, Zaira and Micheloni, Christian},
   booktitle={IEEE/CVF International Conference on Computer Vision (ICCV)},
-  html={[coming soon]},
-  code={[coming soon]},
-  website={[coming soon]},
+  html={https://arxiv.org/abs/2507.16015},
+  code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
+  website={https://machinelearning.uniud.it/datasets/vista/},
   year={2025},
   preview={iccv2025.png},
   selected={true}
@@ -77,7 +77,9 @@
   video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
   year={2024},
   preview={cviu2024.png},
-  selected={false}
+  selected={false},
+  confver={https://openaccess.thecvf.com/content/WACV2024/html/Dunnhofer_Tracking_Skiers_From_the_Top_to_the_Bottom_WACV_2024_paper.html},
+  confvername={WACV 2024}
 }
 
 @inproceedings{dunnhofer2024tracking,
@@ -92,8 +94,8 @@
   arxiv={2312.09723},
   preview={wacv2024.jpg},
   selected={true},
-  extversion={https://www.sciencedirect.com/science/article/pii/S1077314224000596?via%3Dihub#bib1},
-  extversionname={CVIU 2024},
+  journalver={https://www.sciencedirect.com/science/article/pii/S1077314224000596?via%3Dihub#bib1},
+  journalvername={CVIU 2024},
 }
 
 @article{dunnhofer2023visual,
@@ -108,6 +110,8 @@
   publisher={Springer},
   preview={ijcv2023.jpg},
   selected={true},
+  confver={https://openaccess.thecvf.com/content/ICCV2021W/VOT/html/Dunnhofer_Is_First_Person_Vision_Challenging_for_Object_Tracking_ICCVW_2021_paper.html},
+  confvername={ICCVW 2021}
 }
 
 @inproceedings{dunnhofer2023visualizing,
@@ -134,7 +138,7 @@
   title={LBKENet: Lightweight Blur Kernel Estimation Network for Blind Image Super-Resolution},
   author={Khan, Asif Hussain and Umer, Rao Muhammad and Dunnhofer, Matteo and Micheloni, Christian and Martinel, Niki},
   booktitle={International Conference on Image Analysis and Processing (ICIAP)},
-  html={},
+  html={https://link.springer.com/chapter/10.1007/978-3-031-43153-1_18},
   year={2023},
   organization={Springer}
 }
@@ -165,7 +169,9 @@
   year={2022},
   publisher={Elsevier},
   preview={imavis2022.png},
-  selected={false}
+  selected={false},
+  confver={https://ieeexplore.ieee.org/document/9956082},
+  confvername={ICPR 2022}
 }
 
 @thesis{dunnhofer2022visual,
@@ -183,7 +189,9 @@
   code={https://github.com/matteo-dunnhofer/MRPyrNet},
   html={https://www.sciencedirect.com/science/article/abs/pii/S0895611122001124},
   year={2022},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  confver={https://openreview.net/forum?id=7psPmlNffvg},
+  confvername={MIDL 2021}
 }
 
 @inproceedings{dunnhofer2022cocolot,
@@ -197,8 +205,8 @@
   organization={IEEE},
   preview={icpr2022.png},
   selected={true},
-  extversion={https://www.sciencedirect.com/science/article/pii/S0262885622000774},
-  extversionname={IMAVIS 2022}
+  journalver={https://www.sciencedirect.com/science/article/pii/S0262885622000774},
+  journalvername={IMAVIS 2022}
 }
 
 @inproceedings{kristan2022tenth,
@@ -264,20 +272,22 @@
   organization={PMLR},
   preview={midl2021.png},
   selected={true},
-  extversion={https://www.sciencedirect.com/science/article/abs/pii/S0895611122001124},
-  extversionname={CMIG 2022},
+  journalver={https://www.sciencedirect.com/science/article/abs/pii/S0895611122001124},
+  journalvername={CMIG 2022},
 }
 
 @inproceedings{dunnhofer2021first,
   title={Is First Person Vision Challenging for Object Tracking?},
   author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
   booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Challenge VOT2021 workshop},
-  html={},
+  html={https://openaccess.thecvf.com/content/ICCV2021W/VOT/html/Dunnhofer_Is_First_Person_Vision_Challenging_for_Object_Tracking_ICCVW_2021_paper.html},
   video={https://www.youtube.com/watch?v=oX1nICHgEJM},
   arxiv={2108.13665},
   code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
   website={https://machinelearning.uniud.it/datasets/trek150/},
-  year={2021}
+  year={2021},
+  journalver={https://link.springer.com/article/10.1007/s11263-022-01694-6},
+  journalvername={IJCV 2023},
 }
 
 @inproceedings{kristan2021ninth,
