--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   author={Dunnhofer, Matteo and Manigrasso, Zaira and Micheloni, Christian},
   booktitle={IEEE/CVF International Conference on Computer Vision (ICCV)},
   html={https://arxiv.org/abs/2507.16015},
-  code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
+  arxiv={2507.16015},
+  code={https://github.com/matteo-dunnhofer/fpv-tracking-toolkit},
   website={https://machinelearning.uniud.it/datasets/vista/},
   year={2025},
   preview={iccv2025.png},
