--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,15 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{manigrasso2024onlineepisodicmemoryvisual,
+  title={Online Episodic Memory Visual Query Localization with Egocentric Streaming Object Memory}, 
+  author={Zaira Manigrasso* and Matteo Dunnhofer* and Antonino Furnari* and Moritz Nottebaum and Antonio Finocchiaro and Davide Marana and Rosario Forte and Giovanni Maria Farinella and Christian Micheloni},
+  year={2026},
+  booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
+  html={https://arxiv.org/abs/2411.16934},
+  arxiv={2411.16934}, 
+}
+
 @inproceedings{dunnhofer2025istracking,
   title={Is Tracking really more challenging in First Person Egocentric Vision?},
   author={Dunnhofer, Matteo and Manigrasso, Zaira and Micheloni, Christian},
@@ -61,12 +70,6 @@
   arxiv={2409.03460}
 }
 
-@misc{manigrasso2024onlineepisodicmemoryvisual,
-      title={Online Episodic Memory Visual Query Localization with Egocentric Streaming Object Memory}, 
-      author={Zaira Manigrasso* and Matteo Dunnhofer* and Antonino Furnari* and Moritz Nottebaum and Antonio Finocchiaro and Davide Marana and Giovanni Maria Farinella and Christian Micheloni},
-      year={2024},
-      arxiv={2411.16934}, 
-}
 
 @article{dunnhofer2024visual,
   title={Visual tracking in camera-switching outdoor sport videos: Benchmark and baselines for skiing},
