--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,8 @@
   arxiv={2507.16015},
   code={https://github.com/matteo-dunnhofer/fpv-tracking-toolkit},
   website={https://machinelearning.uniud.it/datasets/vista/},
+  video={https://www.youtube.com/watch?v=mGDgqB4Ox5s},
+  poster={https://machinelearning.uniud.it/datasets/vista/static/pdfs/poster_iccv_final.pdf},
   year={2025},
   preview={iccv2025.png},
   selected={true}
