--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,14 +9,16 @@
   year={2026},
   booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
   html={https://arxiv.org/abs/2411.16934},
-  arxiv={2411.16934}, 
+  arxiv={2411.16934},
+  preview={wacv2026.png},
+  selected={true}
 }
 
 @inproceedings{dunnhofer2025istracking,
   title={Is Tracking really more challenging in First Person Egocentric Vision?},
   author={Dunnhofer, Matteo and Manigrasso, Zaira and Micheloni, Christian},
   booktitle={IEEE/CVF International Conference on Computer Vision (ICCV)},
-  html={https://arxiv.org/abs/2507.16015},
+  html={https://openaccess.thecvf.com/content/ICCV2025/html/Dunnhofer_Is_Tracking_Really_More_Challenging_in_First_Person_Egocentric_Vision_ICCV_2025_paper.html},
   arxiv={2507.16015},
   code={https://github.com/matteo-dunnhofer/fpv-tracking-toolkit},
   website={https://machinelearning.uniud.it/datasets/vista/},
@@ -27,6 +29,21 @@
   selected={true}
 }
 
+@inproceedings{dunnhofer2025hicv,
+  title={Better, But Not Sufficient: Testing Video ANNs Against Macaque IT Dynamics},
+  author={Dunnhofer, Matteo and Micheloni, Christian and Kar, Kohitij},
+  booktitle={2nd Human-inspired Computer Vision workshop at ICCV 2025},
+  year={2025},
+  pdf={https://drive.google.com/file/d/1ycb2ojN9PR5vqdoezcG9iJRvupiwzABN/view?usp=drive_link},
+}
+
+@inproceedings{kristan2025third,
+  title={The Third Visual Object Tracking Segmentation VOTS2025 Challenge Results},
+  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Tokmakov, Pavel and Felsberg, Michael and Luke{\v{z}}i{\v{c}}, Alan and Zajc, Luka {\v{C}}ehovin and others},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Segmentation Challenge VOTS2025 workshop},
+  html={https://openaccess.thecvf.com/content/ICCV2025W/VOTS2025/html/Kristan_The_Third_Visual_Object_Tracking_Segmentation_VOTS2025_Challenge_Results_ICCVW_2025_paper.html},
+  year={2025}
+}
 
 @inproceedings{manigrasso2025,
   title={T-EVO: Tracking in Egovision for Online Visual Episodic Memory},
@@ -59,7 +76,6 @@
   booktitle={Vision Sciences Society (VSS) Meeting},
   year={2025},
   html={https://www.visionsciences.org/presentation/?id=2723},
-
 }
 
 @inproceedings{nottebaum2024lowformer,
